docs(开发文档更新): 开发文档更新

--- a/开发.md
+++ b/开发.md
@@ -35,4 +35,27 @@ npm run build 打包 <br>
 
 ## 打包流程
 
+### 打包命令
+
 执行`npm run build`就可以哈,主要是用 tsc+lessc+node 删掉冗余的样式导入。
+
+### 打包效果
+
+目前库的名字命名为 cheesi(minantd 我觉得还是不太好，然后之前一个项目有一个奶酪的 logo 可以直接用)<br>
+`npm install cheesi`
+
+```tsx
+import { Button } from 'cheesi';
+import 'cheesi/dist/index.css';
+import './App.css';
+
+function App() {
+  return (
+    <div className="App">
+      <Button type="danger">test</Button>
+    </div>
+  );
+}
+
+export default App;
+```
