--- a/开发文档.md
+++ b/开发文档.md
@@ -32,6 +32,7 @@ import {Button} from "../"
 - 写组件的样式前，需要在`./src/style/index.less`下导入组件的样式文件。
 - 提交 的时候 可以`npm run commit`
 - 类型定义可以参考 antd，比如 button 的 NativeButtonProps 和 AnchorButtonProps，就是直接复制的。
+- 测试请参考测试文档
 
 ## 打包流程
 
