feat(progress): test

--- a/测试.md
+++ b/测试.md
@@ -95,3 +95,6 @@ jest.fn()可以模拟一个函数，然后fireEvent可以模拟操作。
   });
 ```
 link会渲染成a标签，只需要测试一下能不能找到a标签
+
+### 公共的hook
+在src/tests下编写公用的hook，目前有一个参考antd的mount函数，测试更新和卸载时组件是否正确。
