feat(form): form ,and other change

--- a/测试.md
+++ b/测试.md
@@ -31,7 +31,7 @@
     expect(getByTestId('button')).toMatchSnapshot();
   });
 ```
-首先用RTL库的render函数和getByTestId方法获取元素，然后和快照比对一下（如果没有生成过快照，就会生成）。
+首先用RTL库的render函数和getByTestId方法获取元素，然后和快照比对一下（如果没有生成过快照，就会生成）。注意，可以用```npm test -- -u```覆写快照。
 
 #### 回调函数onClick能否正确触发
 button比较简单，就只有onClick函数。
